Fix z-index issue on home page

--- a/src/components/header/header.module.sass
+++ b/src/components/header/header.module.sass
@@ -12,6 +12,8 @@
 .navbar
   display: flex
   justify-content: flex-end
+  position: relative
+  z-index: 2
 
 .searchbar
   max-width: 540px
