--- a/src/components/navbar/navbar.module.sass
+++ b/src/components/navbar/navbar.module.sass
@@ -6,7 +6,6 @@
   position: relative
   display: flex
   width: 100%
-  z-index: 1
 
   +media('<tablet')
     width: auto
